--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: check things
         run: ls $PROJECT_ROOT
-        echo: true
+        shell: bash
       - name: Install dependencies
         run: |
           cd $PROJECT_ROOT/web/selecto
