use dev.env and prod.env

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps =
     -r{toxinidir}/web/selecto/requirements.txt
     pytest
 commands =
-    pytest -rs tests/
+    pytest -rs {toxinidir}/web/selecto/tests/
 
 [testenv:init_db]
 commands =
