--- a/web/selecto/requirements.txt
+++ b/web/selecto/requirements.txt
@@ -2,5 +2,5 @@ django==4.1.7
 pytest==7.2.2
 pytest-django==4.5.2
 openai===0.27.4
-python-dotenv===1.0.0
 django-allauth===0.54.0
+python-decouple===3.8
