changed 'tox run' to 'tox runserver'

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = run, migrate, install, test, init_db
+envlist = runserver, migrate, install, test, init_db
 skipsdist = True
 
 [testenv]
@@ -9,7 +9,7 @@ setenv =
 deps =
     -r{toxinidir}/web/selecto/requirements.txt
 
-[testenv:run]
+[testenv:runserver]
 commands =
     python {toxinidir}/web/selecto/manage.py runserver 8000
 
