fix ci by add in env

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
 
 [testenv:runserver]
 commands =
-    python {toxinidir}/web/selecto/manage.py runserver 8000
+    ENVIRONMENT={env:ENVIRONMENT:dev} python {toxinidir}/web/selecto/manage.py runserver 8000
 
 [testenv:migrate]
 commands =
@@ -30,4 +30,4 @@ commands =
 
 [testenv:init_db]
 commands =
-    python {toxinidir}/web/selecto/manage.py init_db
+    ENVIRONMENT={env:ENVIRONMENT:dev} python {toxinidir}/web/selecto/manage.py init_db
