create prod config

--- a/tox.ini
+++ b/tox.ini
@@ -32,3 +32,9 @@ commands =
 [testenv:init_db]
 commands =
     python {toxinidir}/web/selecto/manage.py init_db
+
+[testenv:runserver_prod]
+setenv =
+    ENVIRONMENT = prod
+commands =
+    python {toxinidir}/web/selecto/manage.py runserver 8000
