--- a/web/selecto/resources/template.env
+++ b/web/selecto/resources/template.env
@@ -2,3 +2,6 @@ OPENAI_API_KEY="set_this"
 GOOGLE_CLIENT_ID="set_this"
 GOOGLE_SECRET_KEY="set_this"
 DJANGO_SECRET_KEY="set_this"
+POSTGRESQL_DB_NAME="set_this"
+POSTGRESQL_USER="set_this"
+POSTGRESQL_PW="set_this"
