add postgres sql port and host to env file, config, and settings

--- a/web/selecto/resources/template.env
+++ b/web/selecto/resources/template.env
@@ -5,3 +5,5 @@ DJANGO_SECRET_KEY="set_this"
 POSTGRESQL_DB_NAME="set_this"
 POSTGRESQL_USER="set_this"
 POSTGRESQL_PW="set_this"
+POSTGRESQL_HOST="set_this"
+POSTGRESQL_PORT="set_this"
